[gd_scene load_steps=13 format=2]

[ext_resource path="res://Backgrounds/7eaac6bdd74453be0b9d62199fde2d6c.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Coin+button arrow/shadedDark24 - Copy.png" type="Texture" id=3]
[ext_resource path="res://Coin+button arrow/shadedLight24.png" type="Texture" id=4]
[ext_resource path="res://Music/chime-sound-7143.mp3" type="AudioStream" id=5]
[ext_resource path="res://src/levels/End.gd" type="Script" id=6]
[ext_resource path="res://src/levels/bg_scene.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.686275, 0.443137, 0.776471, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.815686, 0.72549, 0.917647, 1 )
border_color = Color( 0.717647, 0.0470588, 0.694118, 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 526.247, 298.915 )
rotation = -1.56167
scale = Vector2( 1.11455, 1.31016 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 7.55
anchor_bottom = 1.8
margin_left = 178.0
margin_top = 219.0
margin_right = 814.0
margin_bottom = 256.0
rect_scale = Vector2( 1.00801, 1.07419 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "This is how our dummies journey 
 came into this world <3"

[node name="Main menu" type="Button" parent="."]
margin_left = 408.0
margin_top = 388.0
margin_right = 608.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
shortcut_in_tooltip = false
text = "Main Menu"

[node name="prev" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 61.0
margin_bottom = 59.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="chime" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Label2" type="Label" parent="."]
margin_left = 627.0
margin_top = 567.0
margin_right = 1028.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 5 )
text = "Â©2022 Eaint & Ladia,Inc.All rights reserved."

[node name="Background music" parent="." instance=ExtResource( 7 )]

[connection signal="mouse_entered" from="Main menu" to="." method="_on_Main_menu_mouse_entered"]
[connection signal="mouse_exited" from="Main menu" to="." method="_on_Main_menu_mouse_exited"]
[connection signal="pressed" from="Main menu" to="." method="_on_Main_menu_pressed"]
[connection signal="mouse_entered" from="prev" to="." method="_on_prev_mouse_entered"]
[connection signal="mouse_exited" from="prev" to="." method="_on_prev_mouse_exited"]
[connection signal="pressed" from="prev" to="." method="_on_prev_pressed"]
